--- a/demo/index.html
+++ b/demo/index.html
@@ -26,7 +26,7 @@
 	  <div id="option_1">
 	  	<div class="row h4 text-primary">URL SparkCollector: Return top 5 URLs</div>
 	  	<div class="row">
-	  	  <input class="col-md-7" type="text" id="q_url" name="q_url" value="https://www.google.com/search?q=ucla">
+	  	  <input class="col-md-7" type="text" id="q_url_8501" name="q_url" value="https://www.google.com/search?q=ucla">
 	      <input class="col-md-2 btn btn-success" type="submit" value="Start" onclick="send(8501)">
 	      <input class="col-md-2 btn btn-danger" type="submit" value="Stop" onclick="submit(0);">
 	    </div>
@@ -35,7 +35,7 @@
 	  <div id="option_2">
 	  	<div class="row h4 text-primary">Website SparkCollector: Return top 10 websites</div>
 	  	<div class="row">
-	      <input class="col-md-7" type="text" id="q_url" name="q_url" value="https://www.google.com/search?q=china">
+	      <input class="col-md-7" type="text" id="q_url_8502" name="q_url" value="https://www.google.com/search?q=china">
 	      <input class="col-md-2 btn btn-success" type="submit" value="Start" onclick="send(8502)">
 	      <input class="col-md-2 btn btn-danger" type="submit" value="Stop" onclick="submit(0);">
 	    </div>
@@ -44,7 +44,7 @@
 	  <div id="option_3">
 	  	<div class="row h4 text-primary">Keyword SparkCollector: Return top 20 keywords (with length > 3)</div>
 	  	<div class="row">
-	      <input class="col-md-7" type="text" id="q_url" name="q_url" value="https://www.bbc.com/">
+	      <input class="col-md-7" type="text" id="q_url_8503" name="q_url" value="https://www.bbc.com/">
 	      <input class="col-md-2 btn btn-success" type="submit" value="Start" onclick="send(8503)">
 	      <input class="col-md-2 btn btn-danger" type="submit" value="Stop" onclick="submit(0);">
 	    </div>
