--- a/demo/index.html
+++ b/demo/index.html
@@ -52,7 +52,7 @@
     </div>
 
     <div id="result" class="col-md-5 ml-auto mr-auto">
-	  <div class="h4 text-primary">Result:</div>
+	  <div id="result_title" class="h4 text-primary">Result:</div>
 	  <ol id="list" class="list-group"></ol>
 	</div>
   </div>
